objects/pse__Forecast_Enhanced_Detail_Category__c.object
<CustomObject>
    <customHelpPage>pse__ForecastEnhancedDetailCategoryHelp</customHelpPage>
    <description>Stores the weighted category totals for the related project or opportunity.</description>
    <fields>
        <fullName>pse__Actuals__c</fullName>
        <description>The Actuals value is the sum of Billings: Expenses, Billings: Milestones, Billings: Misc Adjustments, and Billings: Timecards.</description>
        <inlineHelpText>The Actuals value is the sum of Billings: Expenses, Billings: Milestones, Billings: Misc Adjustments, and Billings: Timecards.</inlineHelpText>
        <label>Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Adjusted_Value__c</fullName>
        <description>Formula field representing the value displayed on the Billing Forecast page for this billing forecast detail category. If an override value is present, it is displayed. If no override value is present, the sum of the roll-up variance and original billing forecast value is displayed. If there is no override value or roll-up variance, the original billing forecast value is displayed.</description>
        <formula>IF(NOT(ISNULL(pse__Override_Value__c)),pse__Override_Value__c,pse__Forecast_Value__c)</formula>
        <inlineHelpText>Formula field representing the value displayed on the Services Revenue Forecast page for this forecast summary category.</inlineHelpText>
        <label>Adjusted Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billings_Expenses__c</fullName>
        <description>The billings for expenses.</description>
        <inlineHelpText>The forecast billings for expenses.</inlineHelpText>
        <label>Billings: Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billings_Milestones__c</fullName>
        <description>The billings for milestones.</description>
        <inlineHelpText>The forecast billings for milestones.</inlineHelpText>
        <label>Billings: Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billings_Misc_Adjustments__c</fullName>
        <description>The billings for miscellaneous adjustments.</description>
        <inlineHelpText>The forecast billings for miscellaneous adjustments.</inlineHelpText>
        <label>Billings: Misc Adjustments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billings_Timecards__c</fullName>
        <description>The billings for timecards.</description>
        <inlineHelpText>The forecast billings for timecards.</inlineHelpText>
        <label>Billings: Timecards</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Category_Label__c</fullName>
        <description>Lookup to the relevant billing forecast setup category label, for example, Expected.</description>
        <formula>pse__Forecast_Setup_Category__r.pse__Label__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Lookup to the relevant forecast setup category label, for example, Expected.</inlineHelpText>
        <label>Category Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Forecast_Enhanced_Detail__c</fullName>
        <description>Lookup to the relevant billing forecast detail record.</description>
        <inlineHelpText>Lookup to the relevant forecast detail record.</inlineHelpText>
        <label>Billing Forecast Detail</label>
        <referenceTo>pse__Forecast_Enhanced_Detail__c</referenceTo>
        <relationshipLabel>Billing Forecast Detail Categories</relationshipLabel>
        <relationshipName>Forecast_Enhanced_Detail_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pse__Forecast_Enhanced_Override__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the currently active billing forecast override applied to this billing forecast detail category.</description>
        <inlineHelpText>Lookup to the currently active forecast override applied to this forecast detail category.</inlineHelpText>
        <label>Billing Forecast Override</label>
        <referenceTo>pse__Forecast_Enhanced_Override__c</referenceTo>
        <relationshipLabel>Billing Forecast Detail Categories</relationshipLabel>
        <relationshipName>Forecast_Enhanced_Detail_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Forecast_Setup_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the billing forecast categories used on the Billing Forecast Setup page.</description>
        <inlineHelpText>Lookup to the forecast categories used on the Forecast Setup page.</inlineHelpText>
        <label>Billing Forecast Setup Category</label>
        <referenceTo>pse__Forecast_Setup_Category__c</referenceTo>
        <relationshipLabel>Billing Forecast Detail Categories Setup</relationshipLabel>
        <relationshipName>Forecast_Enhanced_Detail_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Forecast_Value__c</fullName>
        <description>Calculated value for this billing forecast category, using the multipliers entered on the Billing Forecast Setup page.</description>
        <inlineHelpText>Calculated value for this forecast category, using the multipliers entered on the Forecast Setup page.</inlineHelpText>
        <label>Billing Forecast Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Override_CreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the user who created the currently active billing forecast override applied to this billing forecast detail category.</description>
        <inlineHelpText>Lookup to the user who created the currently active forecast override applied to this forecast detail category.</inlineHelpText>
        <label>Override Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Billing Forecast Detail Categories</relationshipLabel>
        <relationshipName>Forecast_Enhanced_Detail_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_CreatedDate__c</fullName>
        <description>Created date and time of the currently active billing forecast override applied to this billing forecast detail category.</description>
        <formula>pse__Forecast_Enhanced_Override__r.CreatedDate</formula>
        <inlineHelpText>Created date and time of the currently active forecast override applied to this forecast detail category.</inlineHelpText>
        <label>Override Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Override_Notes__c</fullName>
        <description>Notes on the currently active billing forecast override applied to this billing forecast detail category.</description>
        <formula>pse__Forecast_Enhanced_Override__r.pse__Notes__c</formula>
        <inlineHelpText>Notes on the currently active forecast override applied to this forecast detail category.</inlineHelpText>
        <label>Override Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Override_Value__c</fullName>
        <description>Value of the currently active billing forecast override applied to this billing forecast detail category.</description>
        <formula>pse__Forecast_Enhanced_Override__r.pse__Override_Value__c</formula>
        <inlineHelpText>Value of the currently active forecast override applied to this forecast detail category.</inlineHelpText>
        <label>Override Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Assignments__c</fullName>
        <description>The scheduled assignments.</description>
        <inlineHelpText>The scheduled assignments.</inlineHelpText>
        <label>Scheduled: Assignments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Backlog__c</fullName>
        <description>The Scheduled Backlog value is the sum of Scheduled: Assignments, Scheduled: Held RRs, Scheduled: Unheld RRs, and Scheduled: Milestones.</description>
        <inlineHelpText>The Scheduled Backlog value is the sum of Scheduled: Assignments, Scheduled: Held RRs, Scheduled: Unheld RRs, and Scheduled: Milestones.</inlineHelpText>
        <label>Scheduled Backlog</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Held_Resource_Requests__c</fullName>
        <description>The scheduled held resource requests.</description>
        <inlineHelpText>The scheduled held resource requests.</inlineHelpText>
        <label>Scheduled: Held RRs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Milestones__c</fullName>
        <description>The scheduled milestones.</description>
        <inlineHelpText>The scheduled milestones.</inlineHelpText>
        <label>Scheduled: Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Unheld_Resource_Requests__c</fullName>
        <description>The scheduled unheld resource requests.</description>
        <inlineHelpText>The scheduled unheld resource requests.</inlineHelpText>
        <label>Scheduled: Unheld RRs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Unscheduled_Backlog__c</fullName>
        <description>Potential backlog, in the context of perpetual time periods (All Time Periods).</description>
        <inlineHelpText>Potential backlog, in the context of perpetual time periods (All Time Periods).</inlineHelpText>
        <label>Unscheduled Backlog</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Billing Forecast Detail Category</label>
    <nameField>
        <displayFormat>FDetailCategory-{0000}</displayFormat>
        <label>Billing Forecast Detail Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Forecast Detail Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>